--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
 			<div class=" Portfolio-box pobreza">
-				<a href="img/pobreza.png"><img src="img/pobreza.png" width="80%"></a>
+				<a href="img/pobreza.PNG"><img src="img/pobreza.PNG" width="80%"></a>
 				<h3>Pobreza</h3>
 				<p>Click en la imagen</p>
 			</div>
 			<div class=" Portfolio-box clasismo">
-				<a href="img/clasismo.png"><img src="img/clasismo.png" width="80%"></a>
+				<a href="img/clasismo.PNG"><img src="img/clasismo.PNG" width="80%"></a>
 				<h3>Clasismo</h3>
 				<p>Click en la imagen</p>
 			</div>
 			<div class="Portfolio-box infmono">
-				<a href="img/infmono.png"><img src="img/infmono.png" width="80%"></a>
+				<a href="img/infmono.PNG"><img src="img/infmono.PNG" width="80%"></a>
 				<h3>Inflación y monopolio</h3>
 				<p>Click en la imagen</p>
 			</div>
@@ -314,7 +314,7 @@
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="img/open.png" alt="" width="110%">
+						<img src="img/open.PNG" alt="" width="110%">
 						<ul>
 
 							<li><a href="https://www.opendemocracy.net/es/el-coronavirus-marca-el-fin-de-la-era-neoliberal-que-sera-lo-siguiente/" class="fa fa-external-link" target="_blank"></a></li>
